--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "manifest_version": 3,
     "name": "YouTube Max Quality Switcher",
-    "version": "1.1.0",
+    "version": "1.0",
     "description": "Automatically switches YouTube videos to the highest available quality.",
     "permissions": [
         "storage",
@@ -35,7 +35,9 @@
         }
     ],
     "icons": {
-        "48": "icon48.png"
+        "16": "icon16.png",
+        "48": "icon48.png",
+        "128": "icon128.png"
     },
     "action": {
         "default_icon": {
