--- a/.github/workflows/version-updates.yml
+++ b/.github/workflows/version-updates.yml
@@ -17,12 +17,15 @@ jobs:
         id: determine-version
         run: |
           COMMIT_MSG=$(git log --format=%B -n 1)
-          if [[ $COMMIT_MSG == *"Major Update: "* ]]; then
-            echo "Major Update"
+          if [[ $COMMIT_MSG == *"Release: "* ]]; then
+            echo "Bumping Major Version"
             echo "::set-output name=bump::major"
-          elif [[ $COMMIT_MSG == *"Minor Update: "* ]]; then
-            echo "Minor Update"
+          elif [[ $COMMIT_MSG == *("Major Update: "*|"New Feature: "*|"Improvement: "*|"Performance: "*|"Bug Fix: "*|"Security Fix: "*|"Hotfix: "*) ]]; then
+            echo "Bumping Minor Version"
             echo "::set-output name=bump::minor"
+          elif [[ $COMMIT_MSG == *("Minor Update: "*|"Documentation Update: "*|"Build: "*|"CI: "*|"Revert: "*|"Merge: "*|"Style: "*) ]]; then
+            echo "Bumping Patch Version"
+            echo "::set-output name=bump::patch"
           else
             echo "No version update"
             echo "::set-output name=bump::none"
@@ -31,8 +34,25 @@ jobs:
       - name: Update manifest.json
         if: steps.determine-version.outputs.bump != 'none'
         run: |
-          # Use a script to update the version in manifest.json based on the bump type.
-          # Replace 'version' in manifest.json with the new version.
+          sudo apt-get install -y jq
+          
+          CURRENT_VERSION=$(jq -r .version manifest.json)
+          IFS='.' read -ra VERSION_PARTS <<< "$CURRENT_VERSION"
+          
+          MAJOR=${VERSION_PARTS[0]}
+          MINOR=${VERSION_PARTS[1]}
+          PATCH=${VERSION_PARTS[2]}
+
+          if [[ "${{ steps.determine-version.outputs.bump }}" == "major" ]]; then
+            NEW_VERSION="$((MAJOR + 1)).0.0"
+          elif [[ "${{ steps.determine-version.outputs.bump }}" == "minor" ]]; then
+            NEW_VERSION="${MAJOR}.$((MINOR + 1)).0"
+          else
+            NEW_VERSION="${MAJOR}.${MINOR}.$((PATCH + 1))"
+          fi
+
+          jq --arg NEW_VERSION "$NEW_VERSION" '.version = $NEW_VERSION' manifest.json > manifest_updated.json
+          mv manifest_updated.json manifest.json
 
       - name: Commit manifest.json
         if: steps.determine-version.outputs.bump != 'none'
