--- a/.github/workflows/commit-message-lint.yml
+++ b/.github/workflows/commit-message-lint.yml
@@ -15,7 +15,11 @@ jobs:
 
       - name: Lint Commit Messages
         run: |
-          COMMIT_MESSAGES=$(git log --format=%s ${{ github.event.before }}..${{ github.event.after }})
+          if [[ "${{ github.event.before }}" != "0000000000000000000000000000000000000000" ]]; then
+            COMMIT_MESSAGES=$(git log --format=%s ${{ github.event.before }}..${{ github.event.after }})
+          else
+            COMMIT_MESSAGES=$(git log --format=%s -n 1 ${{ github.event.after }})
+          fi
           REQUIRED_PATTERNS=("Major Update: " "Minor Update: " "Documentation Update: " "Bug Fix: " "Security Fix: " "Build: " "CI: " "Revert: " "Release: " "Merge: " "Hotfix: " "New Feature: " "Improvement: " "Performance: " "Style: " "WIP: ")
 
           for PATTERN in "${REQUIRED_PATTERNS[@]}"; do
