--- a/.github/workflows/commit-message-lint.yml
+++ b/.github/workflows/commit-message-lint.yml
@@ -10,21 +10,23 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+    - name: Checkout code
+      uses: actions/checkout@v2
+      with:
+        fetch-depth: 0  # Fetch all history
 
-      - name: Lint Commit Messages
-        run: |
-          if [[ "${{ github.event.before }}" != "0000000000000000000000000000000000000000" ]]; then
-            COMMIT_MESSAGES=$(git log --format=%s ${{ github.event.before }}..${{ github.event.after }})
-          else
-            COMMIT_MESSAGES=$(git log --format=%s -n 1 ${{ github.event.after }})
+    - name: Lint Commit Messages
+      run: |
+        if [[ "${{ github.event.before }}" != "0000000000000000000000000000000000000000" ]]; then
+          COMMIT_MESSAGES=$(git log --format=%s ${{ github.event.before }}..${{ github.event.after }})
+        else
+          COMMIT_MESSAGES=$(git log --format=%s -n 1 ${{ github.event.after }})
+        fi
+        REQUIRED_PATTERNS=("Major Update: " "Minor Update: " "Documentation Update: " "Bug Fix: " "Security Fix: " "Build: " "CI: " "Revert: " "Release: " "Merge: " "Hotfix: " "New Feature: " "Improvement: " "Performance: " "Style: " "WIP: ")
+
+        for PATTERN in "${REQUIRED_PATTERNS[@]}"; do
+          if [[ $COMMIT_MESSAGES != *"$PATTERN"* ]]; then
+            echo "error: Commit message does not contain '$PATTERN'. Please include it."
+            exit 1
           fi
-          REQUIRED_PATTERNS=("Major Update: " "Minor Update: " "Documentation Update: " "Bug Fix: " "Security Fix: " "Build: " "CI: " "Revert: " "Release: " "Merge: " "Hotfix: " "New Feature: " "Improvement: " "Performance: " "Style: " "WIP: ")
-
-          for PATTERN in "${REQUIRED_PATTERNS[@]}"; do
-            if [[ $COMMIT_MESSAGES != *"$PATTERN"* ]]; then
-              echo "error: Commit message does not contain '$PATTERN'. Please include it."
-              exit 1
-            fi
-          done
+        done
