--- a/.github/workflows/commit-message-lint.yml
+++ b/.github/workflows/commit-message-lint.yml
@@ -24,9 +24,15 @@ jobs:
         fi
         REQUIRED_PATTERNS=("Major Update: " "Minor Update: " "Documentation Update: " "Bug Fix: " "Security Fix: " "Build: " "CI: " "Revert: " "Release: " "Merge: " "Hotfix: " "New Feature: " "Improvement: " "Performance: " "Style: " "WIP: ")
 
+        PATTERN_FOUND=0
         for PATTERN in "${REQUIRED_PATTERNS[@]}"; do
-          if [[ $COMMIT_MESSAGES != *"$PATTERN"* ]]; then
-            echo "error: Commit message does not contain '$PATTERN'. Please include it."
-            exit 1
+          if [[ $COMMIT_MESSAGES == *"$PATTERN"* ]]; then
+            PATTERN_FOUND=1
+            break
           fi
         done
+
+        if [[ $PATTERN_FOUND -eq 0 ]]; then
+          echo "error: Commit message does not contain any of the required patterns. Please include one."
+          exit 1
+        fi
