--- a/.github/workflows/version-updates.yml
+++ b/.github/workflows/version-updates.yml
@@ -12,7 +12,8 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
         with:
-          token: ${{ secrets.GITHUB_TOKEN }} # Make sure the token is used for checkout
+          token: ${{ secrets.GITHUB_TOKEN }}
+          fetch-depth: 0
 
       - name: Determine version bump
         id: determine-version
@@ -58,8 +59,6 @@ jobs:
       - name: Commit manifest.json
         if: steps.determine-version.outputs.bump != 'none'
         run: |
-          git config user.name "GitHub Actions"
-          git config user.email "actions@github.com"
-          git add manifest.json
-          git commit -m "Version bump"
-          git push origin HEAD:${{ github.ref }}
+          git config --global user.name "GitHub Actions"
+          git config --global user.email "actions@github.com"
+          git remote set-url origin https://${{ secrets.GITHUB_TOKEN }}@github.com/lakshaykaura/Yt_Max_Quality_Switcher.git
