--- a/.github/workflows/version-updates.yml
+++ b/.github/workflows/version-updates.yml
@@ -28,7 +28,7 @@ jobs:
           elif [[ $COMMIT_MSG == *("Minor Update: "*|"Documentation Update: "*|"Build: "*|"CI: "*|"Revert: "*|"Merge: "*|"Style: "*) ]]; then
             echo "Bumping Patch Version"
             echo "::set-output name=bump::patch"
-          else
+          else:
             echo "No version update"
             echo "::set-output name=bump::none"
           fi
@@ -53,6 +53,9 @@ jobs:
             NEW_VERSION="${MAJOR}.${MINOR}.$((PATCH + 1))"
           fi
 
+          # Printing the calculated version
+          echo "Calculated version: $NEW_VERSION"
+
           jq --arg NEW_VERSION "$NEW_VERSION" '.version = $NEW_VERSION' manifest.json > manifest_updated.json
           mv manifest_updated.json manifest.json
 
@@ -62,3 +65,6 @@ jobs:
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
           git remote set-url origin https://${{ secrets.GITHUB_TOKEN }}@github.com/lakshaykaura/Yt_Max_Quality_Switcher.git
+          git add manifest.json
+          git commit -m "Version bump to $NEW_VERSION" # Optional: Include the version in the commit message
+          git push origin HEAD:${{ github.ref }}
