--- a/.github/workflows/version-updates.yml
+++ b/.github/workflows/version-updates.yml
@@ -70,4 +70,4 @@ jobs:
           git config user.email "actions@github.com"
           git add manifest.json
           git commit -m "Artifact version bumped to ${{ env.NEW_ARTIFACT_VERSION }} in manifest.json"
-          git push origin HEAD:${{ github.ref }}
+          git push --force origin HEAD:${{ github.ref }}
