--- a/.github/workflows/version-updates.yml
+++ b/.github/workflows/version-updates.yml
@@ -14,6 +14,7 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           fetch-depth: 0
+          ref: ${{ github.ref }}
 
       - name: Determine version bump
         id: determine-version
@@ -65,11 +66,10 @@ jobs:
 
       - name: Commit manifest.json
         if: env.bump != 'none'
-        uses: EndBug/add-and-commit@v7
+        uses: EndBug/add-and-commit@v9
         with:
           author_name: 'GitHub Actions'
           author_email: 'actions@github.com'
           message: "Artifact version bumped to ${{ env.NEW_ARTIFACT_VERSION }} in manifest.json"
-          path: manifest.json
-          branch: ${{ github.ref }}
-          token: ${{ secrets.GITHUB_TOKEN }}
+          add: manifest.json
+          github_token: ${{ secrets.GITHUB_TOKEN }}
