--- a/.github/workflows/version-updates.yml
+++ b/.github/workflows/version-updates.yml
@@ -33,14 +33,10 @@ jobs:
           fi
 
       - name: Install GitHub CLI
-        run: |
-          sudo apt-key adv --keyserver keyserver.ubuntu.com --recv-key C99B11DEB97541F0
-          sudo apt-add-repository https://cli.github.com/packages
-          sudo apt update
-          sudo apt install gh      
-          gh auth login --with-token <<< "${{ secrets.github_token }}"
+        uses: cli/cli-action@v1
+        with:
+          token: ${{ secrets.github_token }}
           
-
       - name: Determine version bump
         id: determine-version
         run: |
