Minor Update: Updated Workflows

--- a/.github/workflows/version-updates.yml
+++ b/.github/workflows/version-updates.yml
@@ -2,7 +2,7 @@ name: Version Updates
 
 on:
   pull_request:
-    types: [synchronize, opened]
+    types: [opened, synchronize, closed]
     branches:
       - master
 
@@ -107,3 +107,22 @@ jobs:
           git add manifest.json
           git commit -m "Artifact version bumped to ${{ env.NEW_ARTIFACT_VERSION }} in manifest.json [auto-bump]"
           git push origin HEAD:${{ github.event.pull_request.head.ref }}
+
+
+  revert-version-bump:
+    if: github.event.pull_request.merged == false && contains(github.event.pull_request.title, '[auto-bump]')
+    runs-on: ubuntu-20.04
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
+
+    - name: Revert the auto-bump commit
+      run: |
+        git config user.name "GitHub Actions"
+        git config user.email "actions@github.com"
+        git remote set-url origin https://${{ secrets.github_token }}@github.com/lakshaykaura/Yt_Max_Quality_Switcher.git
+        git revert HEAD
+        git push origin HEAD:${{ github.event.pull_request.head.ref }}
+          
