--- a/.github/workflows/commit-message-lint.yml
+++ b/.github/workflows/commit-message-lint.yml
@@ -22,7 +22,7 @@ jobs:
         else
           COMMIT_MESSAGES=$(git log --format=%s -n 1 ${{ github.event.after }})
         fi
-        REQUIRED_PATTERNS=("Major Update: " "Minor Update: " "Documentation Update: " "Bug Fix: " "Security Fix: " "Build: " "CI: " "Revert " "Release: " "Merge " "Hotfix: " "New Feature: " "Improvement: " "Performance: " "Style: " "WIP: ")
+        REQUIRED_PATTERNS=("Major Update: " "Minor Update: " "Documentation Update: " "Bug Fix: " "Security Fix: " "Build: " "CI: " "Revert " "Release: " "Merge " "Hotfix: " "New Feature: " "Improvement: " "Performance: " "Style: " "WIP: " "[auto-bump]")
 
         PATTERN_FOUND=0
         for PATTERN in "${REQUIRED_PATTERNS[@]}"; do
