--- a/.github/workflows/version-updates.yml
+++ b/.github/workflows/version-updates.yml
@@ -44,6 +44,10 @@ jobs:
         id: determine-version
         run: |
           COMMIT_MSG=$(git log --format=%B -n 1)
+
+          echo "Commit Message: $COMMIT_MSG"
+          echo "PR Number: $PR_NUMBER"
+          
           BUMP="none"
           TMP_BUMP_FILE=bump.txt
           if [[ $COMMIT_MSG == "Merge pull request #"* ]]; then
