Minor Update: Updated git lint script and workflow

--- a/.github/workflows/commit-message-lint.yml
+++ b/.github/workflows/commit-message-lint.yml
@@ -33,6 +33,6 @@ jobs:
         done
 
         if [[ $PATTERN_FOUND -eq 0 ]]; then
-          echo "error: Commit message does not contain any of the required patterns. Please include one."
+          echo "error: Commit message: '$COMMIT_MESSAGES' does not contain any of the required patterns. Please include one."
           exit 1
         fi
