--- a/.github/workflows/version-updates.yml
+++ b/.github/workflows/version-updates.yml
@@ -56,18 +56,28 @@ jobs:
             COMMIT_MSGS=$(gh pr view $PR_NUMBER --json commits -q ".commits[].commit.message")
           
             echo "$COMMIT_MSGS" | while IFS= read -r msg; do
+              # Debug echo
+              echo "Processing commit message: $msg"
+
               # Check if the message starts with "Revert" and extract the original commit message.
               if [[ $msg == Revert* ]]; then
                   msg="${msg#Revert \"}" # Remove "Revert " prefix
                   msg="${msg%\"}"        # Remove trailing double quote
               fi
+              echo "Checking for major release..."
               if [[ $msg == *"Release: "* ]]; then
-                echo "major" > $TMP_BUMP_FILE
-                break
-              elif [[ $msg == "Major Update: "* || $msg == "New Feature: "* || $msg == "Improvement: "* || $msg == "Performance: "* || $msg == "Bug Fix: "* || $msg == "Security Fix: "* || $msg == "Hotfix: "* ]]; then
-                echo "minor" > $TMP_BUMP_FILE
-              elif [[ ! -f $TMP_BUMP_FILE ]] && { [[ $msg == "Minor Update: "* ]] || [[ $msg == "Documentation Update: "* ]] || [[ $msg == "Build: "* ]] || [[ $msg == "CI: "* ]] || [[ $msg == "Style: "* ]]; }; then
-                  echo "patch" > $TMP_BUMP_FILE
+                  echo "major" > $TMP_BUMP_FILE
+                  break
+              else
+                  echo "Checking for minor release..."
+                  if [[ $msg == "Major Update: "* || $msg == "New Feature: "* || $msg == "Improvement: "* || $msg == "Performance: "* || $msg == "Bug Fix: "* || $msg == "Security Fix: "* || $msg == "Hotfix: "* ]]; then
+                      echo "minor" > $TMP_BUMP_FILE
+                  elif [[ ! -f $TMP_BUMP_FILE ]]; then
+                    echo "Checking for patch..."
+                    if [[ $msg == "Minor Update: "* ]] || [[ $msg == "Documentation Update: "* ]] || [[ $msg == "Build: "* ]] || [[ $msg == "CI: "* ]] || [[ $msg == "Style: "* ]]; then
+                        echo "patch" > $TMP_BUMP_FILE
+                    fi
+                  fi
               fi
               echo "TMP_BUMP_FILE status: $( [[ -f $TMP_BUMP_FILE ]] && echo 'Created' || echo 'Still not created' )"
             done
